Fix the visibility issue

--- a/src/styles/table_of_progress.scss
+++ b/src/styles/table_of_progress.scss
@@ -26,6 +26,7 @@
   .is-active {
     background-color: $color-dark-slate-gray;
     color: $color-white;
+    position: relative;
   }
 
   .top-step-name {
